refactor: use getFIrst() instead of get(0)